# agent-exploration

./: .env.example  .gitignore  README.md
apps/: README.md  pyproject.toml  streamlit_phase1.py  streamlit_phase2.py  streamlit_phase3.py  streamlit_phase4.py
lib/: README.md  pyproject.toml
lib/agent_core/: __init__.py  agent.py  registry.py  tools.py
lib/agent_core/prompts/: default.md
lib/planning_agent/: __init__.py  agent.py  pyproject.toml  tools.py
lib/react_agent/: __init__.py  agent.py  pyproject.toml  tools.py
phase_1/: 01_basic_completion.py  01b_sampling_demo.py  02_function_schema.py  02b_tools_comparison.py  03_tool_execution.py  04_agent_loop.py  04b_mcp_comparison.py  05_full_agent.py  README.md  pyproject.toml
phase_2/: 01_react_concept.py  02_react_prompt.py  03_react_parser.py  04_react_loop.py  05_full_react_agent_draft.py  05_react_agent.py  README.md  pyproject.toml
phase_3/: 01_planning_concept.py  02_planning_prompt.py  03_plan_parser.py  04_plan_executor.py  05_planning_agent.py  README.md  pyproject.toml
phase_4/: 01_multi_agent_concept.py  02_debate_agents.py  03_specialist_agents.py  04_orchestrator_worker.py  05_multi_agent_system.py  README.md  pyproject.toml
phase_5/: 01_eval_concepts.py  02_llm_as_judge.py  03_test_harness.py  04_input_guardrails.py  05_output_guardrails.py  README.md  pyproject.toml
